@@ -1,3 +1,4 @@
+-Allow initial binary sync of client database to empty server database.
 -Fix corner case bugs when syncing an empty database twice.
 -Fix some bugs in cloze card type (reported by Roel De Conick, Dougie Nisbet,
  Scott Youngman).
